# MasmLint

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  make  make.bat
.github/workflows/: ci-linux-fast.yml  ci-linux.yml  ci-windows-fast.yml  ci-windows.yml
cmake/: CodeCoverage.cmake  CompilerSettings.cmake  CompilerWarnings.cmake  DynamicAnalyzers.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  StandartProjectSettings.cmake  StaticAnalyzers.cmake  Utilities.cmake  VCEnviroment.cmake  make.py
examples/: expr_test.asm  semantic_errors.asm  syntax_errors.asm  test.asm  test1.asm  test3.asm
ext/: CMakeLists.txt
src/: CMakeLists.txt  add.cpp  add.h  ast.h  context.cpp  context.h  diag_ctxt.cpp  diag_ctxt.h  diagnostic.cpp  diagnostic.h  diagnostic_messages.def  emitter.cpp  emitter.h  error_codes.h  error_reporter.cpp  error_reporter.h  input.cpp  input.h  log.cpp  log.h  main.cpp  parser.cpp  parser.h  parser_errors_reporting.cpp  preprocessor.cpp  preprocessor.h  semantic_analyzer.cpp  semantic_analyzer.h  semantic_analyzer_errors_reporting.cpp  session.cpp  session.h  source_map.cpp  source_map.h  span.cpp  span.h  symbol_table.cpp  symbol_table.h  timer.h  token.h  tokenize.cpp  (+1 more)
tests/: CMakeLists.txt  test_add.cpp  test_main.cpp  test_tokenization.cpp
utils/: .warnings_ignore.yml  count_lines.py  full_code.txt  full_code_old.txt  run_warnings_ignore.py  self_hosted_runners.py
